fix header alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   --theme-1: #d0cda4;
-  --theme-2:#b8e9c6;
+  --theme-2: #b8e9c6;
   --theme-3: #abd4e2;
   --theme-4: #d7a9a2;
   --theme-5: #d0d3e0;
@@ -60,6 +60,13 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+@media (max-width: 300px) {
+  body {
+    width: 300px;
+  }
+}
+
 
 .today-radial {
   background: radial-gradient(97.57% 210.75% at 0.9% 2.98%, var(--radial));
